--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
